--- a/data-notebooks/State-Population.ipynb
+++ b/data-notebooks/State-Population.ipynb
@@ -16,17 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_population_path = Path('../data/SCPRC-EST2019-18+POP-RES.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "state_population_path = Path('../data/SCPRC-EST2019-18+POP-RES.csv')\n",
+    "\n",
     "def state_population(csvfile: Path) -> pd.DataFrame:\n",
-    "    population = pd.read_csv(state_population_path)\n",
+    "    population = pd.read_csv(csvfile)\n",
     "    population = population[[\"NAME\", 'POPESTIMATE2019']]\n",
     "    return population.rename(columns={\"NAME\": \"state\", \"POPESTIMATE2019\": \"pop2019\"})"
    ]
@@ -408,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +756,7 @@
        "51                   Wyoming     578759"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
