--- a/data-notebooks/State-Population.ipynb
+++ b/data-notebooks/State-Population.ipynb
@@ -7,15 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from pathlib import Path\n",
+    "\n",
     "state_population_path = Path('../data/SCPRC-EST2019-18+POP-RES.csv')\n",
     "\n",
     "def state_population(csvfile: Path) -> pd.DataFrame:\n",
