--- a/data-notebooks/County-Population.ipynb
+++ b/data-notebooks/County-Population.ipynb
@@ -11,19 +11,12 @@
     "\n",
     "county_population_path = Path('../data/co-est2019-alldata.csv')\n",
     "\n",
-    "def county_population(csvfile: Path) -> pd.DataFrame:\n",
+    "def us_county_population(csvfile: Path) -> pd.DataFrame:\n",
     "    population = pd.read_csv(csvfile, encoding = \"ISO-8859-1\")\n",
     "    population = population[[\"STNAME\", 'CTYNAME', 'POPESTIMATE2019']]\n",
     "    return population.rename(columns={\"STNAME\": \"state\", \"CTYNAME\": \"county\", \"POPESTIMATE2019\": \"pop2019\"})\n",
     "    return population"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -151,9 +144,16 @@
     }
    ],
    "source": [
-    "county_pop = county_population(county_population_path)\n",
+    "county_pop = us_county_population(county_population_path)\n",
     "county_pop"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
