--- a/data-notebooks/NJ-Population.ipynb
+++ b/data-notebooks/NJ-Population.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def county_population(url: str) -> pd.DataFrame:\n",
+    "def nj_county_population(url: str) -> pd.DataFrame:\n",
     "    header = {\n",
     "      \"User-Agent\": \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.75 Safari/537.36\",\n",
     "      \"X-Requested-With\": \"XMLHttpRequest\"\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,13 +202,13 @@
        "21         Salem County    63336"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "county_population(county_population_url)"
+    "nj_county_population(county_population_url)"
    ]
   },
   {
