--- a/data-notebooks/Pop-Density.ipynb
+++ b/data-notebooks/Pop-Density.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "state_geog_path = Path('../data/us_geography.csv')\n",
     "\n",
     "def state_geography(csvfile: Path) -> pd.DataFrame:\n",
@@ -25,16 +32,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state_pop  = state_population(state_population_path)\n",
-    "state_geog = state_geography(state_geog_path)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,18 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_density = pd.merge(state_pop, state_geog)\n",
-    "state_density['density_land']  = state_density['pop2019'] / state_density['land_sq_mi']\n",
-    "state_density['density_total'] = state_density['pop2019'] / state_density['tot_sq_mi']"
+    "def state_population_density(state_population_path: Path, state_geog_path: Path) -> pd.DataFrame:\n",
+    "    state_pop  = state_population(state_population_path)\n",
+    "    state_geog = state_geography(state_geog_path)\n",
+    "\n",
+    "    state_density = pd.merge(state_pop, state_geog)\n",
+    "    state_density['density_land']  = state_density['pop2019'] / state_density['land_sq_mi']\n",
+    "    state_density['density_total'] = state_density['pop2019'] / state_density['tot_sq_mi']\n",
+    "    return state_density"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_density = state_population_density(Path('../data/SCPRC-EST2019-18+POP-RES.csv'),\n",
+    "                                         Path('../data/us_geography.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +682,7 @@
        "2        1.099433  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
