--- a/data-notebooks/County-Population.ipynb
+++ b/data-notebooks/County-Population.ipynb
@@ -12,10 +12,15 @@
     "county_population_path = Path('../data/co-est2019-alldata.csv')\n",
     "\n",
     "\n",
+    "def strip_county_name(name: str) -> str:\n",
+    "    return name[:-7] if name[-6:].lower() == 'county' else name\n",
+    "\n",
+    "\n",
     "def us_county_population(csvfile: Path) -> pd.DataFrame:\n",
-    "    population = pd.read_csv(csvfile, encoding = \"ISO-8859-1\")\n",
-    "    population = population[[\"STNAME\", 'CTYNAME', 'POPESTIMATE2019']]\n",
-    "    return population.rename(columns={\"STNAME\": \"state\", \"CTYNAME\": \"county\", \"POPESTIMATE2019\": \"pop2019\"})\n",
+    "    colmap = {\"STNAME\": \"state\", \"CTYNAME\": \"county\", \"POPESTIMATE2019\": \"pop2019\"}\n",
+    "    population = pd.read_csv(csvfile, encoding = \"ISO-8859-1\",\n",
+    "                             usecols=colmap,\n",
+    "                             converters={'CTYNAME':strip_county_name})\n",
     "    return population"
    ]
   },
@@ -45,9 +50,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>county</th>\n",
-       "      <th>pop2019</th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "      <th>POPESTIMATE2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -60,25 +65,25 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alabama</td>\n",
-       "      <td>Autauga County</td>\n",
+       "      <td>Autauga</td>\n",
        "      <td>55869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Alabama</td>\n",
-       "      <td>Baldwin County</td>\n",
+       "      <td>Baldwin</td>\n",
        "      <td>223234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Alabama</td>\n",
-       "      <td>Barbour County</td>\n",
+       "      <td>Barbour</td>\n",
        "      <td>24686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Alabama</td>\n",
-       "      <td>Bibb County</td>\n",
+       "      <td>Bibb</td>\n",
        "      <td>22394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -90,31 +95,31 @@
        "    <tr>\n",
        "      <th>3188</th>\n",
        "      <td>Wyoming</td>\n",
-       "      <td>Sweetwater County</td>\n",
+       "      <td>Sweetwater</td>\n",
        "      <td>42343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3189</th>\n",
        "      <td>Wyoming</td>\n",
-       "      <td>Teton County</td>\n",
+       "      <td>Teton</td>\n",
        "      <td>23464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3190</th>\n",
        "      <td>Wyoming</td>\n",
-       "      <td>Uinta County</td>\n",
+       "      <td>Uinta</td>\n",
        "      <td>20226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3191</th>\n",
        "      <td>Wyoming</td>\n",
-       "      <td>Washakie County</td>\n",
+       "      <td>Washakie</td>\n",
        "      <td>7805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3192</th>\n",
        "      <td>Wyoming</td>\n",
-       "      <td>Weston County</td>\n",
+       "      <td>Weston</td>\n",
        "      <td>6927</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -123,18 +128,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        state             county  pop2019\n",
-       "0     Alabama            Alabama  4903185\n",
-       "1     Alabama     Autauga County    55869\n",
-       "2     Alabama     Baldwin County   223234\n",
-       "3     Alabama     Barbour County    24686\n",
-       "4     Alabama        Bibb County    22394\n",
-       "...       ...                ...      ...\n",
-       "3188  Wyoming  Sweetwater County    42343\n",
-       "3189  Wyoming       Teton County    23464\n",
-       "3190  Wyoming       Uinta County    20226\n",
-       "3191  Wyoming    Washakie County     7805\n",
-       "3192  Wyoming      Weston County     6927\n",
+       "       STNAME     CTYNAME  POPESTIMATE2019\n",
+       "0     Alabama     Alabama          4903185\n",
+       "1     Alabama     Autauga            55869\n",
+       "2     Alabama     Baldwin           223234\n",
+       "3     Alabama     Barbour            24686\n",
+       "4     Alabama        Bibb            22394\n",
+       "...       ...         ...              ...\n",
+       "3188  Wyoming  Sweetwater            42343\n",
+       "3189  Wyoming       Teton            23464\n",
+       "3190  Wyoming       Uinta            20226\n",
+       "3191  Wyoming    Washakie             7805\n",
+       "3192  Wyoming      Weston             6927\n",
        "\n",
        "[3193 rows x 3 columns]"
       ]
