--- a/analysis/states.ipynb
+++ b/analysis/states.ipynb
@@ -2,14 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../src')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "import pandas as pd\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from covid import daily_snapshot\n",
+    "import population as pop\n",
+    "#import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('max_rows', 300) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def county_populations_for(state: str) -> pd.DataFrame:\n",
+    "    data = Path('../data/counties')\n",
+    "    state_pop_path = data / Path(state.replace(' ', '').lower() + '.csv')\n",
+    "    state_pop = pd.read_csv(state_pop_path)\n",
+    "    return state_pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(state, date, sort_by, ascending):\n",
+    "    daily = daily_snapshot(datetime.strftime(date, '%m-%d-%Y'))\n",
+    "    state_covid = pd.read_csv('../data/us-states-only.csv')\n",
+    "    county_pop = county_populations_for(state)\n",
+    "    state_with_population = pd.merge(state_covid[state_columns], county_pop,\n",
+    "         how='outer',\n",
+    "         left_on='Admin2', right_on='county')\n",
+    "\n",
+    "    state_with_population['fraction_confirmed'] = state_with_population['Confirmed'] / state_with_population['pop2019']   * 1000.0\n",
+    "    state_with_population['deaths']             = state_with_population['Deaths']    / state_with_population['pop2019']   * 1000.0\n",
+    "    state_with_population['death_rate?']        = state_with_population['Deaths']    / state_with_population['Confirmed'] * 1000.0\n",
+    "\n",
+    "    # sort_by = input(\"column to sort Confirmed, Deaths, county, pop2019, fraction_confirmed, deaths, death_rate?\")\n",
+    "    print(state_with_population.sort_values(by=sort_by, ascending=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "import pandas as pd\n",
     "states = list(pd.read_csv('../data/us-states-only.csv').state)\n",
     "\n",
     "state = widgets.Select(\n",
@@ -27,9 +114,15 @@
     "                          )\n",
     "\n",
     "sort_by = widgets.Select(\n",
-    "    options=['state', 'date'],\n",
-    "    value='date',\n",
-    "    rows=2,\n",
+    "    options=['Confirmed', \n",
+    "             'Deaths', \n",
+    "             'county', \n",
+    "             'pop2019', \n",
+    "             'fraction_confirmed', \n",
+    "             'deaths', \n",
+    "             'death_rate?'],\n",
+    "    value='fraction_confirmed',\n",
+    "    rows=7,\n",
     "    description='sort by:',\n",
     "    disabled=False\n",
     "    )\n",
@@ -43,11 +136,7 @@
     "\n",
     "ui = widgets.HBox([state, date, sort_by, ascending])\n",
     "\n",
-    "def f(state, date, sort_by, ascending):\n",
-    "    dt = datetime.strftime(date, '%m-%d-%Y')\n",
-    "    df = pd.read_csv('../data/us-states-only.csv')\n",
-    "    df['date'] = dt\n",
-    "    print(df.sort_values(by=sort_by, ascending=ascending))\n",
+    "\n",
     "\n",
     "out = widgets.interactive_output(f, {'state': state, \n",
     "                                     'date': date, \n",
