--- a/analysis/states.ipynb
+++ b/analysis/states.ipynb
@@ -69,7 +69,7 @@
     "    state_with_population['death_rate?']        = state_with_population['Deaths']    / state_with_population['Confirmed'] * 1000.0\n",
     "\n",
     "    # sort_by = input(\"column to sort Confirmed, Deaths, county, pop2019, fraction_confirmed, deaths, death_rate?\")\n",
-    "    print(state_with_population.sort_values(by=sort_by, ascending=False))\n"
+    "    display(state_with_population.sort_values(by=sort_by, ascending=False))\n"
    ]
   },
   {
