--- a/analysis/states.ipynb
+++ b/analysis/states.ipynb
@@ -96,7 +96,8 @@
     "\n",
     "sort_by = widgets.Select(\n",
     "    options=['Confirmed', \n",
-    "             'Deaths', \n",
+    "             'Deaths',\n",
+    "             'death_rate'\n",
     "             'county', \n",
     "             'pop2019', \n",
     "             'fraction_confirmed', \n",
