--- a/analysis/states.ipynb
+++ b/analysis/states.ipynb
@@ -83,8 +83,8 @@
     "\n",
     "state = widgets.Select(\n",
     "    options=states,\n",
-    "    #value='Alabama',\n",
-    "    rows=10,\n",
+    "    value='New Jerset',\n",
+    "    rows=5,\n",
     "    description='State:',\n",
     "    disabled=False\n",
     "    )\n",
@@ -98,14 +98,14 @@
     "sort_by = widgets.Select(\n",
     "    options=['Confirmed', \n",
     "             'Deaths',\n",
-    "             'death_rate'\n",
+    "             'death_rate',\n",
     "             'county', \n",
     "             'pop2019', \n",
     "             'fraction_confirmed', \n",
     "             'deaths', \n",
     "             'death_rate?'],\n",
     "    value='fraction_confirmed',\n",
-    "    rows=7,\n",
+    "    rows=5,\n",
     "    description='sort by:',\n",
     "    disabled=False\n",
     "    )\n",
