--- a/analysis/states.ipynb
+++ b/analysis/states.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "state = widgets.Select(\n",
     "    options=states,\n",
-    "    value='New Jerset',\n",
+    "    value='New Jersey',\n",
     "    rows=5,\n",
     "    description='State:',\n",
     "    disabled=False\n",
